# screencapturekit-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs  run_leak_tests.sh
.cargo/: config.example.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  contrib.yml  docs.yml  release-plz.yml  release-rc.yml
benches/: capture_benchmark.rs  hotspots.rs
docs/: BENCHMARKS.md  MIGRATION.md
examples/: 01_basic_capture.rs  02_window_capture.rs  03_audio_capture.rs  04_pixel_access.rs  05_screenshot.rs  06_async.rs  06_iosurface.rs  07_iosurface.rs  07_list_content.rs  08_async.rs  08_list_content.rs  09_closure_handlers.rs  10_recording_output.rs  11_content_picker.rs  12_stream_updates.rs  13_advanced_config.rs  14_app_capture.rs  15_memory_leak_check.rs  17_cpal_audio.rs  17_metal_textures.rs  18_wgpu_integration.rs  18_zero_copy_audio.rs  19_ffmpeg_encoding.rs  20_egui_viewer.rs  21_bevy_streaming.rs  24_batched_apis_showcase.rs  README.md  advanced_configuration.rs  async_demo.rs  async_runtime_agnostic.rs  builder_pattern.rs  capture_audio.rs  cli.rs  complete_capture.rs  custom_dispatch_queue.rs  frame_status.rs  iosurface_capture.rs  memory_leak_check.rs  new_features_demo.rs  profile_capture.rs  (+2 more)
examples/16_full_metal_app/: capture.rs  input.rs  main.rs  overlay.rs  recording.rs  renderer.rs  screenshot.rs  ui.rs  vertex.rs  waveform.rs
examples/16_metal_overlay/: main.rs  vertex.rs
examples/22_tauri_app/: README.md  package-lock.json  package.json
examples/22_tauri_app/src/: index.html  main.js  styles.css
examples/22_tauri_app/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
examples/22_tauri_app/src-tauri/src/: lib.rs  main.rs
examples/23_client_server/: client.rs  server.rs
examples/24_webrtc/: index.html  main.rs
examples/metal_overlay/: capture.rs  font.rs  input.rs  main.rs  overlay.rs  recording.rs  renderer.rs  screenshot.rs  shaders.metal  ui.rs  vertex.rs  waveform.rs
scripts/: atos_summarise.py  check_ffi_symbols.sh  check_symbols.sh  download_apple_docs.py  symbolicate_profile.py
src/: async_api.rs  audio_devices.rs  cg.rs  cm.rs  content_sharing_picker.rs  cpal_adapter.rs  dispatch_queue.rs  error.rs  lib.rs  metal.rs  recording_output.rs  screenshot_manager.rs
src/cg/: mod.rs
src/cm/: audio.rs  block_buffer.rs  ffi.rs  format_description.rs  frame_status.rs  iosurface.rs  mod.rs  pixel_buffer.rs  sample_buffer.rs  time.rs
src/cv/: mod.rs
src/ffi/: mod.rs
src/output/: iosurface.rs  metal.rs  mod.rs  pixel_buffer.rs  sc_stream_frame_info.rs
src/shareable_content/: display.rs  mod.rs  mod_fix.rs  running_application.rs  snapshot.rs  window.rs
src/stream/: content_filter.rs  delegate_trait.rs  mod.rs  output_trait.rs  output_type.rs  sc_stream.rs  screenshot_manager.rs
src/stream/configuration/: advanced.rs  audio.rs  builder.rs  captured_elements.rs  captured_frames.rs  colors.rs  dimensions.rs  internal.rs  mod.rs  pixel_format.rs  stream_properties.rs  types.rs
src/stream/internal/: cleanup.rs  delegate.rs  ffi_utils.rs  stream.rs
src/utils/: completion.rs  error.rs  ffi_string.rs  four_char_code.rs  hash.rs  mod.rs  panic_safe.rs  retained.rs  sync_completion.rs
swift-bridge/: .swiftlint.yml  Package.swift  README.md
swift-bridge/Sources/CoreGraphics/: CoreGraphics.swift
swift-bridge/Sources/CoreMedia/: CoreMedia.swift
swift-bridge/Sources/CoreVideo/: CoreVideo.swift
swift-bridge/Sources/Dispatch/: Dispatch.swift
swift-bridge/Sources/IOSurface/: IOSurface.swift
swift-bridge/Sources/Metal/: Metal.swift
swift-bridge/Sources/ScreenCaptureKitBridge/: AudioDevices.swift  ContentSharingPicker.swift  Core.swift  CoreGraphicsStrided.swift  DispatchQueueBridge.swift  Media.swift  RecordingOutput.swift  ScreenCaptureKitBridge.swift  ScreenshotManager.swift  ShareableContent.swift  Stream.swift  StreamConfiguration.swift
swift-bridge/Sources/ScreenCaptureKitBridge/include/: ScreenCaptureKitBridge.h
swift-bridge/Sources/SwiftBridge/: CoreGraphics.swift  CoreMedia.swift
tests/: async_api_tests.rs  audio_buffer_allocator_test.rs  audio_buffer_tests.rs  audio_capture_end_to_end.rs  audio_devices_tests.rs  audio_video_capture.rs  block_buffer_tests.rs  cg_types_tests.rs  cm_types_tests.rs  completion_tests.rs  configuration_builder_tests.rs  configuration_tests.rs  content_filter_tests.rs  content_sharing_picker_tests.rs  coverage_gap_tests.rs  cpal_adapter_tests.rs  delegate_trait_tests.rs  dispatch_queue_tests.rs  eq_hash_tests.rs  error_code_tests.rs  error_tests.rs  ffi_layout_tests.rs  ffi_string_tests.rs  format_description_tests.rs  fourcharcode_tests.rs  frame_status_tests.rs  integration_tests.rs  iosurface_tests.rs  leak_test.rs  memory_tests.rs  metal_tests.rs  picker_tests.rs  pixel_buffer_tests.rs  recording_output_tests.rs  refcount_leak_test.rs  refcount_memory_test.rs  screenshot_manager_tests.rs  screenshot_manager_tests.rs.backup  shareable_content_info_tests.rs  stream_lifecycle_tests.rs  (+4 more)
